<resources>
    <string name="app_name">mCOP</string>
    <string name="label_terms">Terms &amp; Condition</string>
    <string name="label_title_tern_on_usage">Permit usage acces for mCOP</string>
    <string name="label_msg_tern_on_usage">Please turn on "usage "access" button</string>
    <string name="label_button_start_monitoring">Start Monitoring</string>
    <string name="label_accept_service">I accept terms of service</string>
    <string name="label_analysing">Analysing your device for suspicious application, Please wait.</string>
    <string name="label_initializing">Initializing</string>
    <string name="label_get_hashcode_report">Get hashcode report</string>
    <string name="label_device_safe">Your device\nis SAFE</string>
    <string name="label_device_have">Your device have</string>
    <string name="label_warning">warning</string>
    <string name="label_device_warning">Your device have\n %d waning</string>
    <string name="label_about">About</string>
    <string name="label_apps">Applications</string>
    <string name="label_apps_info">App Info</string>
    <string name="label_rate">Rate</string>
    <string name="label_manageapp">Application List</string>
    <string name="label_ignore">Ignore</string>
    <string name="label_uninstall">Uninstall</string>
    <string name="label_version">Current Version:</string>
    <string name="label_updateed">Updated:</string>
    <string name="label_risk_level">Risk level:</string>
    <string name="label_storage">Storage</string>
    <string name="label_permission">Permission</string>
    <string name="label_about_desc">mCOP by NBTC เตือนภัยแอปพลิเคชั่นอันตรายบนโทรศัพท์เคลื่อนที่</string>
    <string name="label_detect">Detected by:</string>
    <string name="label_safe">Safe</string>
    <string name="label_high">High</string>
    <string name="label_medium">Medium</string>
    <string name="label_Low">Low</string>
    <string name="label_terms_detail">Terms and Conditions

Welcome to mCop. Before using this application, you must agree to comply with and be bound by the following terms and conditions of use, which together with our privacy policy govern the relationship of mCop with you in relation to this application. If you disagree with any part of these terms and conditions, please do not use our application.

The term ‘mCop’ or ‘us’ or ‘we’ refers to the developer of the application mCop, which the project mCop are funded by The National Broadcasting and Telecommunication Commission (NBTC), Thailand. The term ‘you’ refers to the user of our application.

The use of this application is subject to the following terms of use:

· The contents and functions of this application is for your general information and use only. It is subject to change without notice.

· Neither we nor any third parties provide any warranty or guarantee as to the accuracy, timeliness, performance, completeness or suitability of the information and materials found or offered on this application for any particular purpose. You acknowledge that such information and materials may contain inaccuracies or errors and we expressly exclude liability for any such inaccuracies or errors to the fullest extent permitted by law.

· Your use of any information or materials on this application or accessed via this application is entirely at your own risk, for which we shall not be liable. It shall be your own responsibility to ensure that any products, services or information available through this application meet your specific requirements.

· All content on the application is protected by copyright, and owned or controlled by mCop, or the party accredited as the owner or provider of the content. You must abide by all copyright notices, information, or restrictions contained in any content accessed through the application.

· When you download the mCop application, you are bound by the terms of the GNU General Public License. Full GNU GPL license details here: (http://www.gnu.org/licenses/licenses.html#GPL)

· Unauthorised use of this application may give rise to a claim for damages and/or be a criminal offence.

· Your use of this application and any dispute arising out of such use of the application is subject to the laws of Thailand.</string>

    <string name="key_nerver_kill">YouWillNeverKillMe</string>

    <string name="label_ok">Ok</string>
    <string name="label_cancel">Cancel</string>


    <string name="login_user">User</string>
    <string name="login_user_value"></string>
    <string name="login_password">Password</string>
    <string name="login_password_value"></string>
    <string name="login_cancel">Cancel</string>
    <string name="login_login">Login</string>

</resources>
