<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/colorPrimary"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_centerVertical="true"
            android:textSize="@dimen/title_text_size"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textColor="@color/colorBgGray"
            />
    </RelativeLayout>
    
    <TextView
        android:id="@+id/title_terms_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/navbar"
        android:text="@string/label_terms"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textSize="@dimen/title_text_size"
        android:textColor="@android:color/black"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_terms_textview"
        android:layout_above="@+id/accept_checkbox"
        android:layout_margin="@dimen/scroll_margin"
        android:background="@color/colorBgGray"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_terms_detail"
            android:layout_margin="@dimen/activity_horizontal_margin"
            />

    </ScrollView>

    <CheckBox
        android:id="@+id/accept_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_above="@+id/start_monitoring_button"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:button="@drawable/checkbox_selector"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_accept_service"
        android:textColor="@android:color/black"
        android:layout_above="@+id/start_monitoring_button"
        android:layout_toRightOf="@+id/accept_checkbox"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        />

    <Button
        android:id="@+id/start_monitoring_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/label_button_start_monitoring"
        android:enabled="false"
        android:background="@drawable/btn_selector"
        android:textAllCaps="false"
        />

</RelativeLayout>
