<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/colorPrimary"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/title_text_size"
            android:textColor="@android:color/white"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/initialization_margin"
        android:layout_weight="1"
        >
        <ImageView
            android:id="@+id/radar_circle_imageview1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:src="@drawable/inner_circle_green"
            />
        <ImageView
            android:id="@+id/radar_circle_imageview2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:src="@drawable/inner_circle_green"
            />
        <ImageView
            android:id="@+id/radar_circle_imageview3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:src="@drawable/inner_circle_green"
            />
        <ImageView
            android:id="@+id/circle_imageview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:src="@drawable/radar"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:src="@drawable/white_circle"
            android:layout_margin="@dimen/inner_cycle"
            />
        <TextView
            android:id="@+id/status_safe_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_initializing"
            android:textSize="@dimen/row_title_text_size"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/colorTextSafe"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_above="@+id/analysing_textview"
            android:text="@string/label_get_hashcode_report"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/analysing_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/row_title_text_size"
            android:gravity="center"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/label_analysing"
            />

    </RelativeLayout>

</LinearLayout>
