<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/colorPrimary"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/title_text_size"
            android:textColor="@android:color/white"
            />
    </RelativeLayout>

    <Button
        android:id="@+id/about_button"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@drawable/ic_about_selector"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/navbar"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/navbar"
        android:layout_above="@+id/start_log_button"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/initialization_margin"
            android:layout_weight="1"
            >
            <ImageView
                android:id="@+id/radar_circle_imageview1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:src="@drawable/inner_circle_green"
                />
            <ImageView
                android:id="@+id/radar_circle_imageview2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:src="@drawable/inner_circle_green"
                />
            <ImageView
                android:id="@+id/radar_circle_imageview3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:src="@drawable/inner_circle_green"
                />
            <ImageView
                android:id="@+id/circle_imageview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:src="@drawable/radar"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:src="@drawable/white_circle"
                android:layout_margin="@dimen/inner_cycle"
                />
            <TextView
                android:id="@+id/status_safe_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_device_safe"
                android:textSize="@dimen/row_title_text_size"
                android:layout_centerInParent="true"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/colorTextSafe"
                />

            <LinearLayout
                android:id="@+id/container_warning_linearlayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:visibility="invisible"
                >
                <TextView
                    android:id="@+id/status_warning_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_device_have"
                    android:textSize="@dimen/device_have_text_size"
                    android:layout_centerInParent="true"
                    android:textColor="@color/colorTextWarning"
                    android:gravity="center"
                    />
                <TextView
                    android:id="@+id/amount_warning_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="@dimen/amount_text_size"
                    android:layout_centerInParent="true"
                    android:textColor="@color/colorTextWarning"
                    android:textStyle="bold"
                    android:gravity="center"
                    />
                <TextView
                    android:id="@+id/warning_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_warning"
                    android:textSize="@dimen/warning_text_size"
                    android:layout_centerInParent="true"
                    android:textColor="@color/colorTextWarning"
                    android:gravity="center"
                    />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"

            >

            <TextView
                android:id="@+id/title_total_install_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:text="Total installed app"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/number_total_install_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_alignParentRight="true"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/title_app_using_internet_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_below="@+id/title_total_install_textview"
                android:text="App using internet"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/number_app_using_internet_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_below="@+id/title_total_install_textview"
                android:layout_alignParentRight="true"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/manage_app_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:text="@string/label_manageapp"
                android:textAllCaps="false"
                android:background="@drawable/btn_selector"
                android:textColor="@android:color/white"
                />

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/start_log_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_above="@+id/message_textview"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/message_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/test_sms_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="TEST TEST"
        android:visibility="gone"
        />

</RelativeLayout>
