<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/colorPrimary"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_about"
            android:layout_centerInParent="true"
            android:textSize="@dimen/title_text_size"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/version_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/navbar"
        android:text="Version 1.0.0"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/subtitle_text_size"
        />

    <TextView
        android:id="@+id/title_desc_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/version_textview"
        android:text="Description"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/subtitle_text_size"
        />

    <TextView
        android:id="@+id/detail_desc_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_desc_textview"
        android:text="@string/label_about_desc"
        android:layout_marginLeft="@dimen/activity_horizontal_margin_bulet"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/line_margin"
        />

    <TextView
        android:id="@+id/title_support_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_desc_textview"
        android:text="Support"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/subtitle_text_size"

        />

    <TextView
        android:id="@+id/detail_support_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_support_textview"
        android:text="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/title_developer_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_support_textview"
        android:text="Developer"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/subtitle_text_size"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/detail_developer_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_developer_textview"
        android:text="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/title_rate_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_developer_textview"
        android:text="Rate your experience"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/subtitle_text_size"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/detail_rate_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_rate_textview"
        android:text="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:visibility="gone"
        />

    <LinearLayout
        android:id="@+id/logo_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/detail_rate_textview"
        android:gravity="center"
        android:padding="@dimen/activity_horizontal_margin"
        >

        <ImageView
            android:id="@+id/about_logo_imageview"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/about_logo2"
            android:layout_weight="1"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/about_logo1"
            android:layout_weight="1"
            />

    </LinearLayout>

    <Button
        android:id="@+id/rate_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/label_rate"
        android:layout_below="@+id/logo_linear"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_button"
        />

</RelativeLayout>
